# claude-cli-rs

./: .gitignore  Cargo.toml  MIGRATION.md  README.md
.github/workflows/: rust-ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  tui.rs
crates/cli/src/tui/: input.rs  keymap.rs  markdown.rs  slash.rs  theme.rs  vim.rs
crates/cli/tests/: headless_integration.rs  week8_integration.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  history.rs  lib.rs  lockfile.rs  paste_store.rs  paths.rs
crates/core/src/config/: global.rs  mcp.rs  mod.rs  settings.rs
crates/core/src/types/: ids.rs  message.rs  mod.rs  permissions.rs
crates/query/: Cargo.toml
crates/query/src/: context.rs  cost.rs  engine.rs  lib.rs  mcp_tools.rs  stream_parser.rs  system_prompt.rs
crates/services/: Cargo.toml
crates/services/src/: errors.rs  lib.rs
crates/services/src/api/: client.rs  mod.rs  types.rs
crates/services/src/auth/: api_key.rs  auth_token.rs  lockfile.rs  mod.rs  oauth.rs
crates/services/src/mcp/: client.rs  mod.rs  protocol.rs
crates/services/src/mcp/transport/: mod.rs  sse.rs  stdio.rs  ws.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  registry.rs  result_storage.rs  session.rs  trait_def.rs  util.rs
crates/tools/src/builtin/: agent.rs  ask_user.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  notebook_edit.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  todo_write.rs  web_fetch.rs  web_search.rs
