[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/core",
  "crates/query",
  "crates/services",
  "crates/tools",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP (Week 2+; declared early to avoid churn)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
oauth2 = { version = "4", default-features = false }

# Errors
thiserror = "2"
anyhow = "1"

# Utils
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
url = "2"

# File system (Week 4)
globwalk = "0.9"
walkdir = "2"
grep = "0.4"
similar = "3"

# MCP (Week 5)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Web tools (Week 5)
html2text = "0.6"

# History + paste store (Week 6)
sha2 = "0.10"

[profile.release]
# Week 7: reduce binary size without doing anything exotic.
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
