[package]
name = "claude-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claude-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
claude-core = { path = "../core" }
claude-query = { path = "../query" }
claude-services = { path = "../services" }
serde_json.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
