[package]
name = "claude-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
claude-core = { path = "../core" }
claude-services = { path = "../services" }
claude-tools = { path = "../tools" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
