[package]
name = "claude-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
claude-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true
globwalk.workspace = true
walkdir.workspace = true
grep.workspace = true
similar.workspace = true
